# fvcgen

./: .gitignore  AGENTS.md  CHANGELOG.md  CURSOR.md  GEMINI.md  INITIAL_SPEC_RU.md  README.md  pyproject.toml
docs/: IMPLEMENTATION_SUMMARY.md  SPECIFICATION.md
docs/reviews/: docs-2026.05.08.cmd
docs/superpowers/plans/: 2026-05-05-transmission-delay.md
docs/superpowers/specs/: 2026-05-05-transmission-delay-design.md
scripts/: Install-FvcGen.ps1  Login-ToCodeArtifact.ps1  Publish.ps1  install_fvcgen.py  login_to_codeartifact.sh  publish.py
tests/: test_app.py  test_config.py  test_transmission_delay.py
