[project]
name = "fvcgen"
version = "0.2.2"
description = "Scenario generator for UAS traffic management systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pygeodesy>=23.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
fvcgen = "fvc.gen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fvc"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W"]

[dependency-groups]
dev = [
    "duct>=1.0.1",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[[tool.uv.index]]
name = "codeartifact"
url = "https://flyvercity-368281077578.d.codeartifact.eu-west-3.amazonaws.com/pypi/tools/simple/"
publish-url = "https://flyvercity-368281077578.d.codeartifact.eu-west-3.amazonaws.com/pypi/tools/"
